--- a/templates/signup.html
+++ b/templates/signup.html
@@ -51,7 +51,11 @@
                 {% endif %}
             {% endwith %}
 
-            <form action="/signup" method="POST">
+            <form action="/signup" method="POST"  enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label class="form-label">Username:</label>
+                    <input type="text" class="form-control" name="username" required>
+                </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email" name="email" required>
@@ -72,6 +76,10 @@
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password" name="password" required>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Upload Profile Picture:</label>
+                    <input type="file" class="form-control" name="profile_pic" accept="image/*">
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Signup</button>
             </form>
