--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -74,7 +74,7 @@
     </nav>
 
     <div class="container mt-4">
-        <h2 class="text-center mb-4">Welcome, {{ session['email'] }}!</h2>
+        <h2 class="text-center mb-4">Welcome, {{ session['username'] }}!</h2>
 
         <div class="row">
             <!-- Heart Disease Section -->
