--- a/templates/home.html
+++ b/templates/home.html
@@ -42,9 +42,9 @@
           </div>
     
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="./home.html" class="nav-link px-2 link-secondary">Home</a></li>
+            <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
             <li><a href="#" class="nav-link px-2">Features</a></li>
-            <li><a href="./about.html" class="nav-link px-2">About</a></li>
+            <li><a href="./about" class="nav-link px-2">About</a></li>
           </ul>
     
           <div class="col-md-3 text-end">
