--- a/templates/home.html
+++ b/templates/home.html
@@ -99,8 +99,8 @@
               <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/icon.png"/></svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis font-serif">Prediction</h3>
-              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+              <h3 class="fs-2 text-body-emphasis font-serif">Kidney Disease Prediction</h3>
+              <p>Our kidney disease prediction system analyzes medical parameters like blood pressure, creatinine levels, and red blood cell counts to identify the risk of chronic kidney disease.</p>
               <a href="#" class="btn btn-primary">
                 Explore
               </a>
@@ -126,10 +126,10 @@
             <p>Predict whether you are having diabetes based on the given input.</p>
           </div>
           <div class="feature-box">
-            <img src="" alt="jeta banabi">
-            <h3 class="fw-bold">Vebe Nis</h3>
+            <img src="../static/images/ckd2.jpeg" alt="jeta banabi">
+            <h3 class="fw-bold">Kidney Disease Prediction</h3>
             <p>
-              Add koris
+              Predict the likelihood of chronic kidney disease.
             </p>
           </div>
         </div>
