--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -130,7 +130,7 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="../static/images/ckd_banner2.jpeg" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="../static/images/ckd_banner3.png" style="object-fit: cover;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
