--- a/templates/home.html
+++ b/templates/home.html
@@ -106,6 +106,18 @@
               </a>
             </div>
           </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/Cancer_icon.jpeg"/></svg>
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis font-serif">Breast_Cancer Classification</h3>
+              <p>Our breast cancer prediction system analyzes key medical features like cell radius, texture, and concavity to accurately assess the risk of malignant tumors.</p>
+              <a href="#" class="btn btn-primary">
+                Explore
+              </a>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -130,6 +142,13 @@
             <h3 class="fw-bold">Kidney Disease Prediction</h3>
             <p>
               Predict the likelihood of chronic kidney disease.
+            </p>
+          </div>
+          <div class="feature-box">
+            <img src="../static/images/cancer.jpeg" alt="jeta banabi">
+            <h3 class="fw-bold">Breast_Cancer Classification</h3>
+            <p>
+              Predict whether you are at risk of breast cancer
             </p>
           </div>
         </div>
