--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -143,6 +143,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
+                            <img class="img-fluid h-100" src="../static/images/Breast-Cancer.jpeg" style="object-fit: cover;">
+                        </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Breast_Cancer Classification</h3>
+                                <p class="m-0">Early detection,lifelong protection</p>
+                            </div>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a href="/Breast_cancer" class="btns">Check Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
