--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <!-- Libraries Stylesheet -->
     <link href="../static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="../static/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-    <!-- Customized Bootstrap Stylesheet -->
+    
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/doc.css" rel="stylesheet">
     <style>
@@ -121,20 +121,20 @@
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
               <div class="col-md-3 mb-2 mb-md-0">
-               <a class="navbar-brand font-serif" href="./home.html">HealthCheck</a>
+               <a class="navbar-brand font-serif" href="/">HealthCheck</a>
                <img src="../static/images/icon.png" class="d-inline-flex link-body-emphasis text-decoration-none" alt="" width="40" height="32">
               </div>
             
               <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="./home.html" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="#" class="nav-link px-2">Features</a></li>
-                <li><a href="./about.html" class="nav-link px-2">About</a></li>
+                <li><a href="/" class="nav-link px-2 link-secondary"><i class="fa fa-home" aria-hidden="true">Home</i></a></li>
+                <li><a href="/dashboard" class="nav-link px-2"><i class="fa fa-server" aria-hidden="true">Features</i></a></li>
+                <li><a href="/about" class="nav-link px-2"><i class="fa fa-info-circle" aria-hidden="true">About</i></a></li>
               </ul>
             
-              <div class="col-md-3 text-end">
+              <!--<div class="col-md-3 text-end">
                 <button type="button" class="btn btn-outline-primary me-2" onclick="location.href='./login.html'">Login</button>
                 <button type="button" class="btn btn-primary" onclick="location.href='./signup.html'">Sign-up</button>
-              </div>
+              </div>-->
             </header>
           </div>
         <!-- About Start -->
@@ -158,7 +158,7 @@
                                     <h5 class="mb-3"><i class="fa fa-check-circle text-primary me-3"></i>Multi-Disease Detection</h5>
                                 </div>
                             </div>
-                            <a href="dashboard.html" class="btn btn-primary py-3 px-5 mt-4 wow zoomIn" data-wow-delay="0.6s">Predict</a>
+                            <!--<a href="dashboard.html" class="btn btn-primary py-3 px-5 mt-4 wow zoomIn" data-wow-delay="0.6s">Predict</a>-->
                         </div>
                         <div class="col-lg-5" style="min-height: 500px;">
                             <div class="position-relative h-100">
@@ -182,10 +182,10 @@
                         <div class="col-lg-3 col-md-6">
                             <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                                <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Login</a>
-                                <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Features</a>
+                                <a class="text-light mb-2" href="/"><i class="fa fa-angle-right me-2"></i>Home</a>
+                                <a class="text-light mb-2" href="/about"><i class="fa fa-angle-right me-2"></i>About Us</a>
+                                <a class="text-light mb-2" href="/dashboard"><i class="fa fa-angle-right me-2"></i>Login</a>
+                                <a class="text-light mb-2" href="/login"><i class="fa fa-angle-right me-2"></i>Features</a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
