--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,7 +19,7 @@
     <link href="../static/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="../static/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
+   
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="../static/css/doc.css" rel="stylesheet">
@@ -53,8 +53,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/dashboard">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/dashboard"><i class="fa fa-home" aria-hidden="true">Home</i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about"><i class="fa fa-info-circle" aria-hidden="true">About</i></a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown">
                             <img src="../static/images/profile_icon.png" alt="Profile" height="25px">
@@ -114,15 +114,15 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="../static/images/l3.jpg" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="../static/images/parkinson.png" style="object-fit: cover;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
-                                <h3>Liver Dieases Prediction</h3>
-                                <p class="m-0">Protect your liver with intelligent predictions</p>
+                                <h3>Parkinsons Dieases Prediction</h3>
+                                <p class="m-0">Detect Parkinsons with intelligent predictions</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
-                                <a href="#" class="btns">Check Now</a>
+                                <a href="/parkinson" class="btns">Check Now</a>
                             </div>
                         </div>
                     </div>
@@ -145,10 +145,10 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Login</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Features</a>
+                        <a class="text-light mb-2" href="home1.html"><i class="fa fa-angle-right me-2"></i>Home</a>
+                        <a class="text-light mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>About Us</a>
+                        <a class="text-light mb-2" href="login.html"><i class="fa fa-angle-right me-2"></i>Login</a>
+                        <a class="text-light mb-2" href="dashboard.html"><i class="fa fa-angle-right me-2"></i>Features</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
