--- a/templates/home.html
+++ b/templates/home.html
@@ -150,6 +150,29 @@
           </div>
           <div class="col d-flex align-items-start">
             <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/liver_icon.jpg"/></svg>
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis font-serif">Liver Disease Prediction</h3>
+              <p>Our liver disease prediction system evaluates key health indicators like bilirubin levels, liver enzymes, and protein concentrations to detect the risk of chronic liver disease.</p>
+              <a href="#" class="btn btn-primary">
+                Explore
+              </a>
+            </div>
+          </div><div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/P_icon.jpg"/></svg>
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis font-serif">Parkinson Disease Prediction</h3>
+              <p>Our Parkinson’s disease prediction system assesses key medical factors like tremor severity, motor function, and dopamine levels to identify the risk of developing Parkinson's disease.</p>
+              <a href="#" class="btn btn-primary">
+                Explore
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
               <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/Cancer_icon.jpeg"/></svg>
             </div>
             <div>
