--- a/templates/home.html
+++ b/templates/home.html
@@ -164,7 +164,7 @@
               <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/P_icon.jpg"/></svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis font-serif">Parkinson Disease Prediction</h3>
+              <h3 class="fs-2 text-body-emphasis font-serif">Parkinson's Disease Prediction</h3>
               <p>Our Parkinson’s disease prediction system assesses key medical factors like tremor severity, motor function, and dopamine levels to identify the risk of developing Parkinson's disease.</p>
               <a href="#" class="btn btn-primary">
                 Explore
