--- a/templates/liver.html
+++ b/templates/liver.html
@@ -90,15 +90,15 @@
             </select>
           </div>
           <div class="mb-3">
-            <label class="form-label">Total_Bilirubin</label>
+            <label class="form-label">Total_Bilirubin (mg/dL)</label>
             <input type="number" step="0.1" class="form-control" name="Total_Bilirubin" required/>
           </div>
           <div class="mb-3">
-            <label class="form-label">Direct_Bilirubin</label>
+            <label class="form-label">Direct_Bilirubin (mg/dL)</label>
             <input type="number" step="0.1" class="form-control" name="Direct_Bilirubin" required/>
           </div>
           <div class="mb-3">
-            <label class="form-label">Alkaline_Phosphotase</label>
+            <label class="form-label">Alkaline_Phosphotase (IU/L)</label>
             <input type="number" class="form-control" name="Alkaline_Phosphotase" required/>
           </div>
         </div>
@@ -106,19 +106,19 @@
         <!-- Right Column -->
         <div class="col-md-6">
           <div class="mb-3">
-            <label class="form-label">Alamine_Aminotransferase</label>
+            <label class="form-label">Alamine_Aminotransferase (IU/L)</label>
             <input type="number" class="form-control" name="Alamine_Aminotransferase" required/>
           </div>
           <div class="mb-3">
-            <label class="form-label">Aspartate_Aminotransferase</label>
+            <label class="form-label">Aspartate_Aminotransferase (IU/L)</label>
             <input type="number" class="form-control" name="Aspartate_Aminotransferase" required/>
           </div>
           <div class="mb-3">
-            <label class="form-label">Total_Protiens</label>
+            <label class="form-label">Total_Protiens (g/dL)</label>
             <input type="number" step="0.1" class="form-control" name="Total_Protiens" required/>
           </div>
           <div class="mb-3">
-            <label class="form-label">Albumin</label>
+            <label class="form-label">Albumin (g/dL)</label>
             <input type="number" step="0.1" class="form-control" name="Albumin" required/>
           </div>
           <div class="mb-3">
