changes made by sumanta on 7/5/25 1:20 pm

--- a/templates/parkinson.html
+++ b/templates/parkinson.html
@@ -86,7 +86,7 @@
             </a>
 
             <a href="../templates/dashboard.html" style="text-decoration: none;">
-            <a href="/" style="text-decoration: none;">
+            <a href="/dashboard" style="text-decoration: none;">
                 <button type="button">Back</button>
             </a>
         </div>
