--- a/templates/home.html
+++ b/templates/home.html
@@ -134,7 +134,8 @@
 
         </div>
         <div class="col d-flex align-items-start">
-            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+            <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 <svg class="bi" width="1em" height="1em">
                     <image width="1em" height="1em" href="../static/images/icon.png" />
                 </svg>
@@ -149,7 +150,8 @@
             </div>
         </div>
         <div class="col d-flex align-items-start">
-            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+            <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 <svg class="bi" width="1em" height="1em">
                     <image width="1em" height="1em" href="../static/images/diabetes.png" />
                 </svg>
@@ -162,7 +164,22 @@
                     Explore
                 </a>
             </div>
-
+        </div>
+        <div class="col d-flex align-items-start">
+            <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg class="bi" width="1em" height="1em">
+                    <image width="1em" height="1em" href="../static/images/liver_icon.jpg" />
+                </svg>
+            </div>
+            <div>
+                <h3 class="fs-2 text-body-emphasis font-serif">Liver Disease Prediction</h3>
+                <p>Our liver disease prediction system evaluates key health indicators like bilirubin levels, liver
+                    enzymes, and protein concentrations to detect the risk of chronic liver disease.</p>
+                <a href="#" class="btn btn-primary">
+                    Explore
+                </a>
+            </div>
         </div>
         <div class="col d-flex align-items-start">
             <div
@@ -170,40 +187,27 @@
                 <svg class="bi" width="1em" height="1em">
                     <image width="1em" height="1em" href="../static/images/kidneyLogo2.jpg" />
                 </svg>
-
-          </div>
-          <div class="col d-flex align-items-start">
-            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-              <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/liver_icon.jpg"/></svg>
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis font-serif">Liver Disease Prediction</h3>
-              <p>Our liver disease prediction system evaluates key health indicators like bilirubin levels, liver enzymes, and protein concentrations to detect the risk of chronic liver disease.</p>
-              <a href="#" class="btn btn-primary">
-                Explore
-              </a>
-            </div>
-          </div><div class="col d-flex align-items-start">
-            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-              <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/P_icon.jpg"/></svg>
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis font-serif">Parkinson's Disease Prediction</h3>
-              <p>Our Parkinson’s disease prediction system assesses key medical factors like tremor severity, motor function, and dopamine levels to identify the risk of developing Parkinson's disease.</p>
-              <a href="#" class="btn btn-primary">
-                Explore
-              </a>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-              <svg class="bi" width="1em" height="1em"><image width="1em" height="1em" href="../static/images/Cancer_icon.jpeg"/></svg>
-
             </div>
             <div>
                 <h3 class="fs-2 text-body-emphasis font-serif">Kidney Disease Prediction</h3>
                 <p>Our kidney disease prediction system analyzes medical parameters like blood pressure, creatinine
                     levels, and red blood cell counts to identify the risk of chronic kidney disease.</p>
+                <a href="#" class="btn btn-primary">
+                    Explore
+                </a>
+            </div>
+        </div>
+        <div class="col d-flex align-items-start">
+            <div
+                class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg class="bi" width="1em" height="1em">
+                    <image width="1em" height="1em" href="../static/images/P_icon.jpg" />
+                </svg>
+            </div>
+            <div>
+                <h3 class="fs-2 text-body-emphasis font-serif">Parkinson's Disease Prediction</h3>
+                <p>Our Parkinson’s disease prediction system assesses key medical factors like tremor severity,
+                    motor function, and dopamine levels to identify the risk of developing Parkinson's disease.</p>
                 <a href="#" class="btn btn-primary">
                     Explore
                 </a>
@@ -226,7 +230,6 @@
             </div>
         </div>
 
-    </div>
     </div>
     <!-- About End -->
     <!-- Service Start -->
@@ -300,7 +303,7 @@
                     <div class="row g-5">
                         <div class="col-md-4 service-item wow zoomIn" data-wow-delay="0.6s">
                             <div class="rounded-top overflow-hidden">
-                                <img class="img-fluid" src="../static/images/ckd2.jpeg" alt="" 
+                                <img class="img-fluid" src="../static/images/ckd2.jpeg" alt=""
                                     style="object-fit: cover; height: 250px; width: 100%;">
                             </div>
                             <div class="position-relative bg-light rounded-bottom text-center p-4">
